[tool.poetry]
name = "package"
version = "0.1.0"
description = ""
authors = ["adrienmoy <adrienkmoy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
panda = "^0.3.1"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
